@@ -1,3 +1,9 @@
+2007-03-18  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-settings-multimedia-keys.c: (dialog_show): fix multimedia
+	window appearing in a different position when shown for the first time
+	and thus causing a "jump" effect on the second (fixes bug #400915)
+
 2007-02-28  Jens Granseuer  <jensgr@gmx.net>
 
 	* actions/acme-volume-gstreamer.c: (acme_volume_gstreamer_open): ref
